styles/style.css
/* ... */
.resume-button {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px;
  width: 162px;
  height: 48px;
  margin-top: 16px;
  border: 1px solid #6070ff;
  border-radius: 8px;
  left: 0;
}

.btn-resume button:hover {
  background-color: #6070ff;
  color: white;
  cursor: pointer;
  opacity: 0.8;
}

.btn-resume button:focus {
  background-color: #6070ff;
  color: white;
}

.languages-p {
  margin-top: 46px;
  display: flex;
  justify-content: space-between;
}

.drop-down {
  width: 24px;
  height: 16px;
  margin-left: 149px;
}

.arrow-pointers {
  width: 24px;
  height: 16px;
  margin-left: 159px;
}

.languages-list {
  display: flex;
  flex-direction: row;
  align-items: center;
  background: #f7f7f9;
  border-radius: 8px;
  margin-top: 25px;
  padding-top: 10px;
}

.js-logo {
  width: 48px;
  height: 48px;
  border-radius: 1px solid #fff;
  margin-right: 16px;
  margin-left: 12px;
}

.hr-frame {
  margin-bottom: 71px;
}

.hr-skills {
  margin-bottom: 113.85px;
  width: 100%;
}

/* Section Four: Contact Form-------------------------------------------------------------- */
footer.footer-bx {
  width: 375px;
  margin: auto;
  top: 0;
}

.contact-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 375px;
  height: 779px;
  background: #6070ff;
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  text-align: center;
  background-image: url(../images/contact\ form\ shapes-mobile@2x.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: right;
  border-radius: 95px 0 0 0;
  margin-top: -71px;
}

.contacts-bx {
  display: flex;
  flex-direction: column;
  padding: 24px;
}

.contacts-texts {
  margin-top: 66px;
  margin-bottom: 28px;
}

.contacts-texts h1 {
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
}

.contacts-texts p {
  width: 327px;
  height: 102px;
  left: 24px;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #ebebff;
}

form .contacts-lists {
  padding: 0;
  margin: 0;
}

.contact-inpt {
  height: 48px;
  border: none;
  border-radius: 8px;
  background: #fff;
  margin-bottom: 20px;
  width: 100%;
  padding: 18px 24px;
  font-style: normal;
  font-size: 17px;
  font-weight: 400;
  left: 16px;
  right: 38px;
  top: calc(50% - 18px / 2);
  color: #172b4d;
}

.inpt-bx {
  height: 18px;
  font-weight: 400;
  font-size: 17px;
  display: flex;
  align-items: center;
  color: #172b4d;
  border: none;
}

.textarea-inpt {
  width: 327px;
  height: 170px;
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  background: #fff;
  padding: 12px;
  margin-bottom: 22px;
}

.txtarea-bx {
  width: 273px;
  height: 140px;
  border: none;
  font-size: 15px;
  line-height: 24px;
  color: #b3bac5;
}

.button-inpt {
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 12px 16px;
  position: absolute;
  width: 140px;
  height: 48px;
  left: 24px;
  background: #fff;
  border-radius: 8px;
}

.btn-inpt {
  display: flex;
  align-items: center;
  text-align: center;
  background-color: #fff;
  width: 108px;
  height: 24px;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  letter-spacing: 0.03em;
  color: #6070ff;
  border: none;
}

.button-inpt:hover {
  background-color: #6070ff;
  color: white;
  cursor: pointer;
  opacity: 0.9;
}

.btn-inpt:hover {
  background-color: #6070ff;
  color: white;
  cursor: pointer;
  opacity: 0.9;
}

.button-inpt:active {
  background-color: white;
  color: #6070ff;
}

.btn-inpt:active {
  background-color: white;
  color: #6070ff;
}

@media screen and (max-width: 768px) {
  .hamburger {
    display: block;
    cursor: pointer;
  }

  .bars {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #6070ff;
  }

  .hamburger.active .bars:nth-child(2) {
    opacity: 0;
  }

  .hamburger.active .bars:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  .hamburger.active .bars:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  li {
    list-style-type: none;
  }

  a {
    text-decoration: none;
  }

  .nav-menu {
    position: fixed;
    gap: 0;
    display: flex;
    flex-direction: column;
    width: 375px;
    transition: 0.3s;
    backdrop-filter: blur(6px);
    background-color: rgb(31 57 255 / 65%);
  }

  .nav-menu li {
    margin: 16px 0;
    color: white;
  }

  .nav-menu.active {
    top: 0;
    z-index: 10;
    width: 100%;
    height: 100%;
    padding: 1px 0 0 28px;
  }

  #menu-x {
    margin-left: 83%;
    font-size: 14px;
  }

  .nav-menu li a {
    text-decoration: none;
    font-family: "poppins", sans-serif;
    font-weight: 500;
    font-size: 25px;
    line-height: 20px;
    align-items: center;
    text-align: center;
    color: white;
  }
}
/* ... */

